--- a/src/Platform/Easy.Platform.EfCore/Easy.Platform.EfCore.csproj
+++ b/src/Platform/Easy.Platform.EfCore/Easy.Platform.EfCore.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="7.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.0" />
     <PackageReference Include="Polly" Version="7.2.3" />
+    <PackageReference Include="OpenTelemetry.Instrumentation.SqlClient" Version="1.0.0-rc9.9" />
   </ItemGroup>
 
   <ItemGroup>
