--- a/src/Platform/Easy.Platform.MongoDB/Easy.Platform.MongoDB.csproj
+++ b/src/Platform/Easy.Platform.MongoDB/Easy.Platform.MongoDB.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.18.0" />
     <PackageReference Include="Polly" Version="7.2.3" />
+    <PackageReference Include="MongoDB.Driver.Core.Extensions.OpenTelemetry" Version="1.0.0" />
   </ItemGroup>
 
   <ItemGroup>
