Fix missing typings

--- a/src/PlatformExampleAppWeb/apps/playground-text-snippet/tsconfig.editor.json
+++ b/src/PlatformExampleAppWeb/apps/playground-text-snippet/tsconfig.editor.json
@@ -2,6 +2,6 @@
   "extends": "./tsconfig.json",
   "include": ["**/*.ts"],
   "compilerOptions": {
-    "types": ["jest", "node", "../../typings/custom-global"]
+    "types": ["jest", "node", "custom-global"]
   }
 }
