--- a/src/PlatformExampleAppWeb/apps/playground-text-snippet/tsconfig.json
+++ b/src/PlatformExampleAppWeb/apps/playground-text-snippet/tsconfig.json
@@ -18,7 +18,7 @@
     "strict": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    "types": ["node", "../../typings/custom-global"]
+    "types": ["node", "custom-global"]
   },
   "angularCompilerOptions": {
     "strictInjectionParameters": true,
