--- a/src/PlatformExampleAppWeb/libs/apps-domains/text-snippet-domain/tsconfig.lib.json
+++ b/src/PlatformExampleAppWeb/libs/apps-domains/text-snippet-domain/tsconfig.lib.json
@@ -5,7 +5,7 @@
     "declaration": true,
     "declarationMap": true,
     "inlineSources": true,
-    "types": ["node", "../../../typings/custom-global"]
+    "types": ["node", "custom-global"]
   },
   "exclude": ["src/test-setup.ts", "src/**/*.spec.ts", "jest.config.ts", "src/**/*.test.ts"],
   "include": ["src/**/*.ts"]
