--- a/src/PlatformExampleAppWeb/libs/platform-core/tsconfig.json
+++ b/src/PlatformExampleAppWeb/libs/platform-core/tsconfig.json
@@ -18,7 +18,7 @@
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    "types": ["node", "../../typings/custom-global"]
+    "types": ["node", "custom-global"]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
