--- a/src/.editorconfig
+++ b/src/.editorconfig
@@ -531,3 +531,141 @@ dotnet_diagnostic.ASP0014.severity = suggestion
 # FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
 # OTHER DEALINGS IN THE SOFTWARE.
 ##########################################
+
+# S112: General exceptions should never be thrown
+dotnet_diagnostic.S112.severity = suggestion
+
+# S1125: Boolean literals should not be redundant
+dotnet_diagnostic.S1125.severity = suggestion
+
+# S3925: "ISerializable" should be implemented correctly
+dotnet_diagnostic.S3925.severity = suggestion
+
+# S3442: "abstract" classes should not have "public" constructors
+dotnet_diagnostic.S3442.severity = suggestion
+
+# S3427: Method overloads with default parameter values should not overlap 
+dotnet_diagnostic.S3427.severity = suggestion
+
+# S3358: Ternary operators should not be nested
+dotnet_diagnostic.S3358.severity = suggestion
+
+# S1118: Utility classes should not have public constructors
+dotnet_diagnostic.S1118.severity = suggestion
+
+# S4136: Method overloads should be grouped together
+dotnet_diagnostic.S4136.severity = suggestion
+
+# S2184: Results of integer division should not be assigned to floating point variables
+dotnet_diagnostic.S2184.severity = suggestion
+
+# S1135: Track uses of "TODO" tags
+dotnet_diagnostic.S1135.severity = warning
+
+# S1168: Empty arrays and collections should be returned instead of null
+dotnet_diagnostic.S1168.severity = suggestion
+
+# S3060: "is" should not be used with "this"
+dotnet_diagnostic.S3060.severity = suggestion
+
+# S2326: Unused type parameters should be removed
+dotnet_diagnostic.S2326.severity = suggestion
+
+# S125: Sections of code should not be commented out
+dotnet_diagnostic.S125.severity = suggestion
+
+# S1939: Inheritance list should not be redundant
+dotnet_diagnostic.S1939.severity = suggestion
+
+# S1117: Local variables should not shadow class fields
+dotnet_diagnostic.S1117.severity = suggestion
+
+# S2743: Static fields should not be used in generic types
+dotnet_diagnostic.S2743.severity = suggestion
+
+# S3963: "static" fields should be initialized inline
+dotnet_diagnostic.S3963.severity = suggestion
+
+# S3218: Inner class members should not shadow outer class "static" or type members
+dotnet_diagnostic.S3218.severity = suggestion
+
+# S4035: Classes implementing "IEquatable<T>" should be sealed
+dotnet_diagnostic.S4035.severity = suggestion
+
+# S3241: Methods should not return values that are never used
+dotnet_diagnostic.S3241.severity = suggestion
+
+# S1006: Method overrides should not change parameter defaults
+dotnet_diagnostic.S1006.severity = suggestion
+
+# S3887: Mutable, non-private fields should not be "readonly"
+dotnet_diagnostic.S3887.severity = suggestion
+
+# S2386: Mutable fields should not be "public static"
+dotnet_diagnostic.S2386.severity = suggestion
+
+# S2386: Types should be named in PascalCase
+dotnet_diagnostic.S101.severity = suggestion
+
+# S5547: Cipher algorithms should be robust
+dotnet_diagnostic.S5547.severity = suggestion
+
+# S1075: URIs should not be hardcoded
+dotnet_diagnostic.S1075.severity = suggestion
+
+# S1215: "GC.Collect" should not be called
+dotnet_diagnostic.S1215.severity = suggestion
+
+# S2365: Properties should not make collection or array copies
+dotnet_diagnostic.S2365.severity = suggestion
+
+# S3237: "value" parameters should be used
+dotnet_diagnostic.S3237.severity = suggestion
+
+# S108: Nested blocks of code should not be left empty
+dotnet_diagnostic.S108.severity = suggestion
+
+# S3875: "operator==" should not be overloaded on reference types
+dotnet_diagnostic.S3875.severity = suggestion
+
+# S3011: Reflection should not be used to increase accessibility of classes, methods, or fields
+dotnet_diagnostic.S3011.severity = suggestion
+
+# S3928: Parameter names used into ArgumentException constructors should match an existing one
+dotnet_diagnostic.S3928.severity = suggestion
+
+# S1643: Strings should not be concatenated using '+' in a loop
+dotnet_diagnostic.S1643.severity = suggestion
+
+# S3260: Non-derived "private" classes and records should be "sealed"
+dotnet_diagnostic.S3260.severity = suggestion
+
+# S1123: "Obsolete" attributes should include explanations
+dotnet_diagnostic.S1123.severity = suggestion
+
+# S1172: Unused method parameters should be removed
+dotnet_diagnostic.S1172.severity = suggestion
+
+# S3267: Loops should be simplified with "LINQ" expressions
+dotnet_diagnostic.S3267.severity = suggestion
+
+# S3604: Member initializer values should not be redundant
+dotnet_diagnostic.S3604.severity = suggestion
+
+# S1481: Unused local variables should be removed
+dotnet_diagnostic.S1481.severity = suggestion
+
+# S3220: Method calls should not resolve ambiguously to overloads with "params"
+dotnet_diagnostic.S3220.severity = suggestion
+
+# S2234: Parameters to 'Compare' have the same names but not the same order as the method arguments
+dotnet_diagnostic.S2234.severity = suggestion
+
+# S2328: "GetHashCode" should not reference mutable fields
+dotnet_diagnostic.S2328.severity = suggestion
+
+# S1206: "Equals(Object)" and "GetHashCode()" should be overridden in pairs
+dotnet_diagnostic.S1206.severity = suggestion
+
+# S2372: Exceptions should not be thrown from property getters
+dotnet_diagnostic.S2372.severity = warning
