--- a/src/Platform/Easy.Platform.AzureFileStorage/Easy.Platform.AzureFileStorage.csproj
+++ b/src/Platform/Easy.Platform.AzureFileStorage/Easy.Platform.AzureFileStorage.csproj
@@ -12,6 +12,10 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Storage.Blobs" Version="12.14.1" />
+    <PackageReference Include="SonarAnalyzer.CSharp" Version="8.52.0.60960">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
