--- a/src/Platform/Easy.Platform.MongoDB/Easy.Platform.MongoDB.csproj
+++ b/src/Platform/Easy.Platform.MongoDB/Easy.Platform.MongoDB.csproj
@@ -13,6 +13,10 @@
     <PackageReference Include="MongoDB.Driver" Version="2.18.0" />
     <PackageReference Include="Polly" Version="7.2.3" />
     <PackageReference Include="MongoDB.Driver.Core.Extensions.OpenTelemetry" Version="1.0.0" />
+    <PackageReference Include="SonarAnalyzer.CSharp" Version="8.52.0.60960">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
