--- a/src/PlatformExampleApp/PlatformExampleApp.Shared/PlatformExampleApp.Shared.csproj
+++ b/src/PlatformExampleApp/PlatformExampleApp.Shared/PlatformExampleApp.Shared.csproj
@@ -9,6 +9,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="SonarAnalyzer.CSharp" Version="8.52.0.60960">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\Platform\Easy.Platform\Easy.Platform.csproj" />
   </ItemGroup>
 
