--- a/src/PlatformExampleAppWeb/package.json
+++ b/src/PlatformExampleAppWeb/package.json
@@ -68,10 +68,12 @@
     "@typescript-eslint/eslint-plugin": "5.36.1",
     "@typescript-eslint/parser": "5.36.1",
     "eslint": "~8.15.0",
-    "eslint-config-prettier": "8.1.0",
+    "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-cypress": "2.10.3",
     "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-simple-import-sort": "8.0.0",
+    "eslint-plugin-sonarjs": "^0.18.0",
     "eslint-plugin-unused-imports": "2.0.0",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
