Update editorconfig rules

--- a/src/.editorconfig
+++ b/src/.editorconfig
@@ -459,7 +459,7 @@ dotnet_diagnostic.CA1707.severity = none
 dotnet_diagnostic.CA2201.severity = none
 dotnet_diagnostic.CA1725.severity = none
 dotnet_diagnostic.CA1720.severity = suggestion
-dotnet_diagnostic.CA1716.severity = suggestion
+dotnet_diagnostic.CA1716.severity = none
 dotnet_diagnostic.CA1310.severity = none
 dotnet_diagnostic.CA1051.severity = none
 dotnet_diagnostic.CA1805.severity = suggestion
