Update fix example client build failed

--- a/src/PlatformExampleAppWeb/apps/playground-text-snippet/Dockerfile
+++ b/src/PlatformExampleAppWeb/apps/playground-text-snippet/Dockerfile
@@ -11,6 +11,7 @@ COPY tsconfig.base.json .
 COPY nx.json .
 COPY angular.json .
 COPY .eslintrc.json .
+COPY .prettierrc .
 COPY decorate-angular-cli.js .
 COPY libs libs
 COPY typings typings
