Fix platform example app build

--- a/src/PlatformExampleAppWeb/.vscode/settings.json
+++ b/src/PlatformExampleAppWeb/.vscode/settings.json
@@ -57,5 +57,7 @@
   "eslint.alwaysShowStatus": true,
   "[typescript]": {
     "editor.formatOnSave": true
-  }
+  },
+  "importSorter.generalConfiguration.sortOnBeforeSave": true,
+  "importSorter.sortConfiguration.removeUnusedImports": true
 }
