--- a/src/PlatformExampleAppWeb/.vscode/extensions.json
+++ b/src/PlatformExampleAppWeb/.vscode/extensions.json
@@ -14,6 +14,8 @@
     "streetsidesoftware.code-spell-checker",
     "alefragnani.bookmarks",
     "eamodio.gitlens",
-    "sonarsource.sonarlint-vscode"
+    "sonarsource.sonarlint-vscode",
+    "mike-co.import-sorter",
+    "dozerg.tsimportsorter"
   ]
 }
