--- a/src/.editorconfig
+++ b/src/.editorconfig
@@ -432,6 +432,7 @@ dotnet_diagnostic.IDE0240.severity = none
 dotnet_diagnostic.IDE0074.severity = suggestion
 # IDE0200: Remove unnecessary lambda expression
 dotnet_diagnostic.IDE0200.severity = none
+dotnet_diagnostic.IDE0270.severity = suggestion
 
 dotnet_diagnostic.SA1101.severity = suggestion
 dotnet_diagnostic.SA1413.severity = suggestion
@@ -450,6 +451,7 @@ dotnet_diagnostic.SA1649.severity = suggestion
 dotnet_diagnostic.SA1309.severity = suggestion
 dotnet_diagnostic.SA1127.severity = suggestion
 
+dotnet_diagnostic.CA1068.severity = none
 dotnet_diagnostic.CA1304.severity = none
 dotnet_diagnostic.CA1305.severity = none
 dotnet_diagnostic.CA1822.severity = none
